[package]
name = "mtpcopy"
version = "0.3.0"
authors = ["Iwasa Kazmi <kzmizzz@gmail.com>"]
edition = "2018"

[dependencies]
bindings = { path = "bindings" }
chrono = "0.4"
futures = "0.3"
getopts = "0.2"
windows = "0.11.0"
log = "0.4"
pretty_env_logger = "0.4"

[dev-dependencies]
tempfile = "3.2.0"
test-case = "1.1"
